--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "animate.css": "^4.1.1",
     "chart.js": "^2.9.4",
     "hammerjs": "^2.0.8",
+    "mat-table-exporter": "^10.2.4",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
