--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@types/chart.js": "^2.9.34",
     "angular-bootstrap-md": "^12.0.0",
     "animate.css": "^4.1.1",
@@ -30,10 +33,11 @@
     "mat-table-exporter": "^10.2.4",
     "ng2-tel-input": "^2.3.0",
     "ngx-intl-tel-input": "^3.1.1",
+    "ngx-show-hide-password": "^2.3.0",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^14.1.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
